--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -9,7 +9,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right: 15px;
 }
 
 .search-form {
@@ -20,8 +19,8 @@ body {
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
-    height: 60px;
-    background-color: #4a4a4a;
+    height: 70px;
+    background: linear-gradient(0, hsla(0, 0%, 100%, 0), #ffffff 10%);
     z-index: 1000;
 }
 
@@ -32,13 +31,8 @@ button {
     width: 100px;
     border: 0;
     border-radius: 4px;
-    background-color: #ffffff;
-    color: #1f1f1f;
-}
-
-.load-more {
     background-color: #4a4a4a;
-    color: #ffffff;
+    color: #e7e7e7;
 }
 
 button:hover {
@@ -47,21 +41,27 @@ button:hover {
 
 input {
     height: 40px;
-    border: 0;
+    border: 4px solid #4a4a4a;
     border-radius: 4px;
     margin-right: 10px;
 }
 
 .gallery {
-    max-width: 1200px;
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+    @media screen and (min-width: 1280px) {
+        width: 1200px;
+    }
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 60px;
-    padding: 30px;
+    padding-bottom: 60px;
 }
 
 .photo-card {
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     margin: 10px;
 }
 
@@ -71,7 +71,15 @@ input {
 }
 
 img {
-    width: 180px;
-    height: 120px;
+    width: 300px;
+    height: 180px;
+    @media screen and (min-width: 480px) {
+        width: 200px;
+        height: 160;
+    }
+    @media screen and (min-width: 1280px) {
+        width: 250px;
+        height: 160;
+    }
     object-fit: cover;
 }
