--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -20,7 +20,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     height: 70px;
-    background: linear-gradient(0, hsla(0, 0%, 100%, 0), #ffffff 10%);
+    background: linear-gradient(0, hsla(0, 0%, 100%, 0), #ffffff 5%);
     z-index: 1000;
 }
 
@@ -28,9 +28,10 @@ button {
     font-weight: bold;
     text-transform: uppercase;
     height: 40px;
-    width: 100px;
+    width: 80px;
     border: 0;
     border-radius: 4px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     background-color: #4a4a4a;
     color: #e7e7e7;
 }
@@ -39,9 +40,15 @@ button:hover {
     opacity: 0.8;
 }
 
+button:active {
+    box-shadow: none;
+}
+
 input {
+    width: 150;
     height: 40px;
     border: 4px solid #4a4a4a;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     border-radius: 4px;
     margin-right: 10px;
 }
@@ -63,6 +70,16 @@ input {
 .photo-card {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     margin: 10px;
+    background: #ffffff;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.photo-card:hover {
+    transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+    -moz-transform: scale(1.03);
+    -ms-transform: scale(1.03);
+    -o-transform: scale(1.03);
 }
 
 .photo-card a {
