--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -5,7 +5,10 @@ p {
 }
 
 body {
-    font-size: 14px;
+    font-size: 16px;
+    @media screen and (min-width: 1280px) {
+        font-size: 14px;
+    }
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +30,7 @@ body {
 button {
     font-weight: bold;
     text-transform: uppercase;
-    height: 40px;
+    height: 50px;
     width: 80px;
     border: 0;
     border-radius: 4px;
@@ -46,7 +49,7 @@ button:active {
 
 input {
     width: 150;
-    height: 40px;
+    height: 50px;
     border: 4px solid #4a4a4a;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     border-radius: 4px;
