--- a/src/sass/_utils.scss
+++ b/src/sass/_utils.scss
@@ -3,9 +3,9 @@
 }
 
 .overflow {
-    overflow-y: hidden;
-    touch-action: none;
-    -ms-touch-action: none;
+    // overflow-y: hidden;
+    // touch-action: none;
+    // -ms-touch-action: none;
     @media screen and (min-width: 768px) {
         padding-right: 17px;
     }
