--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,4 +1,11 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+//VAR============
+// $collor-main: #4a4a4a;
+// $collor-secondary: #ffffff;
+$collor-main: #fafafa;
+$collor-secondary: #474747;
+$collor-bg: #2a2a2a;
+$collor-font: #2a2a2a;
 p {
     margin: 0;
     padding: 0;
@@ -12,6 +19,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: $collor-bg;
 }
 
 .search-form {
@@ -23,7 +31,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     height: 70px;
-    background: linear-gradient(0, hsla(0, 0%, 100%, 0), #ffffff 5%);
+    background: linear-gradient(0, hsla(0, 0%, 100%, 0), $collor-bg 5%);
     z-index: 1000;
 }
 
@@ -35,8 +43,8 @@ button {
     border: 0;
     border-radius: 4px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
-    background-color: #4a4a4a;
-    color: #e7e7e7;
+    background-color: $collor-main;
+    color: $collor-font;
 }
 
 button:hover {
@@ -50,7 +58,9 @@ button:active {
 input {
     width: 150;
     height: 50px;
-    border: 4px solid #4a4a4a;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: 4px solid $collor-main;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     border-radius: 4px;
     margin-right: 10px;
@@ -72,7 +82,7 @@ input {
 //=========================
 .gallery-wrap {
     margin-top: 70px;
-    padding-bottom: 30px;
+    // margin-bottom: -10px;
 }
 
 .gallery-x {
@@ -89,10 +99,16 @@ input {
 
 //=============================
 .photo-card {
+    border: 8px solid $collor-secondary;
+    border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     margin: 10px;
-    background: #ffffff;
+    background: $collor-secondary;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
 }
 
 .photo-card:hover {
@@ -105,10 +121,11 @@ input {
 
 .photo-card a {
     text-decoration: none;
-    color: #1f1f1f;
+    // color: $collor-main;
 }
 
 img {
+    border-radius: 8px;
     width: 300px;
     height: 180px;
     @media screen and (min-width: 480px) {
@@ -120,4 +137,9 @@ img {
         height: 160;
     }
     object-fit: cover;
+}
+
+.info-item {
+    font-weight: 200;
+    color: $collor-main;
 }
