--- a/src/sass/_utils.scss
+++ b/src/sass/_utils.scss
@@ -2,10 +2,15 @@
     display: none;
 }
 
-.overflow {
-    // overflow-y: hidden;
-    // touch-action: none;
-    // -ms-touch-action: none;
+// .overflow {
+//     // overflow-y: hidden;
+//     // touch-action: none;
+//     // -ms-touch-action: none;
+//     @media screen and (min-width: 768px) {
+//         padding-right: 17px;
+//     }
+// }
+.padding-right {
     @media screen and (min-width: 768px) {
         padding-right: 17px;
     }
