--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,11 +1,4 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-//VAR============
-// $collor-main: #4a4a4a;
-// $collor-secondary: #ffffff;
-$collor-main: #fafafa;
-$collor-secondary: #474747;
-$collor-bg: #2a2a2a;
-$collor-font: #2a2a2a;
 p {
     margin: 0;
     padding: 0;
@@ -43,8 +36,8 @@ button {
     border: 0;
     border-radius: 4px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
-    background-color: $collor-main;
-    color: $collor-font;
+    background-color: $collor-secondary;
+    color: $collor-font-secondary;
 }
 
 button:hover {
@@ -56,33 +49,20 @@ button:active {
 }
 
 input {
-    width: 150;
+    width: 210;
     height: 50px;
-    font-weight: bold;
     text-transform: uppercase;
-    border: 4px solid $collor-main;
+    outline: none;
+    color: $collor-font-secondary;
+    background-color: $collor-bg;
+    border: 4px solid $collor-secondary;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     border-radius: 4px;
     margin-right: 10px;
 }
 
-// .gallery {
-//     @media screen and (min-width: 480px) {
-//         width: 480px;
-//     }
-//     @media screen and (min-width: 1280px) {
-//         width: 1200px;
-//     }
-//     display: flex;
-//     flex-wrap: wrap;
-//     justify-content: center;
-//     margin-top: 70px;
-//     padding-bottom: 60px;
-// }
-//=========================
 .gallery-wrap {
     margin-top: 70px;
-    // margin-bottom: -10px;
 }
 
 .gallery-x {
@@ -97,7 +77,6 @@ input {
     justify-content: center;
 }
 
-//=============================
 .photo-card {
     border: 8px solid $collor-secondary;
     border-radius: 8px;
@@ -121,13 +100,17 @@ input {
 
 .photo-card a {
     text-decoration: none;
-    // color: $collor-main;
 }
 
 img {
-    border-radius: 8px;
+    border-radius: 4px;
     width: 300px;
     height: 180px;
+    object-fit: cover;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
     @media screen and (min-width: 480px) {
         width: 200px;
         height: 160;
@@ -136,7 +119,6 @@ img {
         width: 250px;
         height: 160;
     }
-    object-fit: cover;
 }
 
 .info-item {
