--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,5 @@
-$collor-main: #fafafa;
+$collor-main: #ebebeb;
 $collor-secondary: #323232;
 $collor-bg: #0f0f0f;
 $collor-font: #1f1f1f;
-$collor-font-secondary: #fafafa;
+$collor-font-secondary: #ebebeb;
