--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -33,7 +33,7 @@ button {
     text-transform: uppercase;
     height: 50px;
     width: 100px;
-    border: 0;
+    border: none;
     border-radius: 4px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     background-color: $collor-secondary;
@@ -50,12 +50,12 @@ button:active {
 
 input {
     width: 210;
-    height: 50px;
+    height: 49px;
     text-transform: uppercase;
     outline: none;
     color: $collor-font;
     background-color: $collor-main;
-    border: 4px solid $collor-main;
+    border: none;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.22);
     border-radius: 4px;
     margin-right: 10px;
