--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -5,6 +5,7 @@ p {
 }
 
 body {
+    position: relative;
     font-size: 16px;
     @media screen and (min-width: 1280px) {
         font-size: 14px;
@@ -51,7 +52,6 @@ button:active {
 input {
     width: 210;
     height: 49px;
-    text-transform: uppercase;
     outline: none;
     color: $collor-font;
     background-color: $collor-main;
@@ -63,6 +63,7 @@ input {
 
 .gallery-wrap {
     margin-top: 70px;
+    padding-bottom: 70px;
 }
 
 .gallery-x {
@@ -126,9 +127,11 @@ img {
     color: $collor-main;
 }
 
-.end-gallery {
+.gallery-end {
+    position: absolute;
+    bottom: 0;
     text-align: center;
     width: 100%;
     color: $collor-font-secondary;
-    margin-top: 10px;
+    margin-bottom: 20px;
 }
