--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -10,10 +10,7 @@
 }
 
 .full-screen {
-    position: fixed;
-    height: 100%;
-    background: $collor-bg;
-    z-index: 999;
+    top: 200px;
 }
 
 .lds-ellipsis {
